--- a/src/style.css
+++ b/src/style.css
@@ -33,10 +33,14 @@ body {
 h1 {
   font-size: 3em;
   line-height: 1.1;
+  margin: 0px;
+  padding: 20px 0px 20px 0px;
   font-family: 'BlocHeavy';
 }
 h2{
-  line-height: 1;
+  line-height: 1.4;
+  margin: 0px;
+  padding: 20px 0px 20px 0px;
   font-family: 'BlocHeavy';
   font-size: 2rem;
 }
