--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,7 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
+  font-family: 'Montserrat';
 }
 h1 {
   font-size: 3em;
@@ -42,7 +43,21 @@ h2{
   margin: 0px;
   padding: 20px 0px 20px 0px;
   font-family: 'BlocHeavy';
-  font-size: 2rem;
+  font-size: 2.3rem;
+}
+h3{
+  line-height: 1.4;
+  margin: 0px;
+  padding: 20px 0px 20px 0px;
+  font-family: 'BlocHeavy';
+  font-size: 2.3rem;
+}
+h4{
+  line-height: 1.2;
+  margin: 0px;
+  padding: 20px 0px 20px 0px;
+  font-family: 'BlocHeavy';
+  font-size: 1.6rem;
 }
 button {
   border-radius: 8px;
