--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', sans-serif;
 }
 h1 {
   font-size: 3em;
